--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Coursera Test</title>
 </head>
 <body>
-    <h1>Hello Coursera!!</h1>
+    <H1>Hello Coursera!!</h1>
     <h2>Hello Coursera!!!</h2>
     <h3> In dorosteh</h3>
 </body>
