--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <H1>hello</h1>
-    <h2>Hello Coursera!!!</h2>
+    <h2>Hello !!!</h2>
     <h3> In dorosteh</h3>
 </body>
 </html>
